# Legion-Y720-Keyboard-Backlight

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md  backlight.conf  backlight.service  install_deps.sh
files/: apparmor.profile  backlight.conf  backlight.service  sysusers.conf
files/effects/: custom-effects.conf
files/effects/effect1/: 1.stage  2.stage  3.stage  4.stage
src/: backlight.conf  config.c  config.h  hardware.c  hardware.h  hw.c  hw.h  log.c  log.h  main.c  properties.c  properties.h  user.h  utils.c  utils.h
